# stats-io

./: .gitignore  AGENT.md  IMPLEMENTATION_PLAN.md  LICENSE  NEW_FEATURES_TESTING_PLAN.md  README.md  WARNINGS_AND_FEATURES_PLAN.md  index.html  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/analysis/: mod.rs
src-tauri/src/analysis/comparison/: mod.rs
src-tauri/src/analysis/engine/: mod.rs
src-tauri/src/analysis/insights/: mod.rs
src-tauri/src/analysis/rules/: advanced.rs  mod.rs
src-tauri/src/commands/: analysis.rs  comparison.rs  hardware.rs  metrics.rs  mod.rs  profiles.rs  reports.rs  sessions.rs  settings.rs
src-tauri/src/core/: domain.rs  error.rs  interfaces.rs  mod.rs  profiles.rs  settings.rs
src-tauri/src/hardware/: mod.rs
src-tauri/src/hardware/adapters/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/hardware/hal/: mod.rs
src-tauri/src/metrics/: mod.rs  models.rs  utils.rs
src-tauri/src/persistence/: mod.rs
src-tauri/tests/: advanced_bottleneck_test.rs  advanced_detection_test.rs  bottleneck_analysis_test.rs  comparison_test.rs  cpu_temperature_test.rs  e2e_workflow_test.rs  gpu_detection_test.rs  gpu_metrics_test.rs  hardware_detection_test.rs  metrics_collection_test.rs  new_features_bottleneck_analysis_test.rs  new_features_error_handling_test.rs  new_features_integration_test.rs  persistence_test.rs  regression_test.rs  reports_test.rs  session_management_test.rs  settings_test.rs  storage_detection_test.rs  storage_metrics_test.rs
(+33 files in other folders)
