[package]
name = "stats-io"
version = "0.1.0"
description = "PC Rig Hardware & Bottleneck Analyzer"
authors = ["stats-io developers"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stats_io_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# System information
sysinfo = "0.30"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform-specific (Windows)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Wmi",
] }

# Testing
[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.8"
